--- a/test/dom-test.html
+++ b/test/dom-test.html
@@ -7,7 +7,7 @@
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
     <script src="../../web-component-tester/browser.js"></script>
 
-    <link rel="import" href="../../../juicy-tile-table/juicy-tile-table.html" />
+    <link rel="import" href="../../juicy-tile-table/juicy-tile-table.html" />
     <link rel="import" href="../src/juicy-tile-simple-editor.html" />
 
     <link rel="stylesheet" href="style.css" />
