--- a/test/dom-test.html
+++ b/test/dom-test.html
@@ -74,9 +74,7 @@
                         var rec = tw.tile(0).getBoundingClientRect();
                         expect(rec.width).to.be.equal(pageSize.width / 2);
                         done();
-                    }).catch(function (ex) {
-                        done(ex);
-                    });
+                    }, done);
             });
 
             it("changes priority of a tile on priority arrow button click", function (done) {
@@ -98,9 +96,7 @@
                         }
 
                         done();
-                    }).catch(function (ex) {
-                        done(ex);
-                    });
+                    }, done);
             });
 
             it("hides a tile on eye button click", function (done) {
@@ -124,9 +120,7 @@
                         }
 
                         done();
-                    }).catch(function (ex) {
-                        done(ex);
-                    });
+                    }, done);
             });
         });
     </script>
