--- a/test/setup-test.html
+++ b/test/setup-test.html
@@ -73,9 +73,7 @@
                         var setup = tw.setup(0);
                         expect(setup.width).to.be.equal("50%");
                         done();
-                    }).catch(function (ex) {
-                        done(ex);
-                    });
+                    }, done);
             });
 
             it("changes priority of a tile on priority arrow button click", function (done) {
@@ -93,9 +91,7 @@
 
                         expect(b.priority).to.be.above(a.priority);
                         done();
-                    }).catch(function (ex) {
-                        done(ex);
-                    });
+                    }, done);
             });
 
             it("hides a tile on eye button click", function (done) {
@@ -111,9 +107,7 @@
                         var setup = tw.setup(0);
                         expect(setup.hidden).to.be.true;
                         done();
-                    }).catch(function (ex) {
-                        done(ex);
-                    });
+                    }, done);
             });
         });
     </script>
